// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar avatar displays correct image when their is an image 1`] = `
.c2 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(162,162,162,0.75), rgba(162,162,162,0.25), rgba(162,162,162,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c1 {
  border-radius: 50%;
  overflow: hidden;
  width: 1.5em;
  height: 1.5em;
  background-image: url(https://tinyurl.com/49dba3d4);
  background-size: cover;
}

.c3 {
  border-radius: 50%;
}

<div>
  <div
    class=" c0 c1"
    color="#D5D5D5"
    size="1.5"
  >
    <div
      class=" c2 c3"
      color="#a2a2a2"
    />
  </div>
</div>
`;

exports[`Avatar avatar displays correct initials when there is no image 1`] = `
.c3 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(162,162,162,0.75), rgba(162,162,162,0.25), rgba(162,162,162,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 50%;
  padding: 1em;
  width: 1.5em;
  height: 1.5em;
  background-color: #D5D5D5;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  color: #51575D;
  font-size: 0.5em;
  font-weight: 600;
}

.c4 {
  border-radius: 50%;
}

<div>
  <div
    class=" c0 c1"
    color="#D5D5D5"
    size="1.5"
  >
    <span
      class=" c2"
      size="1.5"
    >
      SA
    </span>
    <div
      class=" c3 c4"
      color="#a2a2a2"
    />
  </div>
</div>
`;

exports[`Avatar avatar shape is correct 1`] = `
.c3 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(162,162,162,0.75), rgba(162,162,162,0.25), rgba(162,162,162,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 30%;
  padding: 1em;
  width: 1.5em;
  height: 1.5em;
  background-color: #D5D5D5;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  color: #51575D;
  font-size: 0.5em;
  font-weight: 600;
}

.c4 {
  border-radius: 30%;
}

<div>
  <div
    class=" c0 c1"
    color="#D5D5D5"
    size="1.5"
  >
    <span
      class=" c2"
      size="1.5"
    />
    <div
      class=" c3 c4"
      color="#a2a2a2"
    />
  </div>
</div>
`;

exports[`Avatar avatar size is correct 1`] = `
.c3 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(162,162,162,0.75), rgba(162,162,162,0.25), rgba(162,162,162,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 50%;
  padding: 1em;
  width: 21em;
  height: 21em;
  background-color: #D5D5D5;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  color: #51575D;
  font-size: 7em;
  font-weight: 600;
}

.c4 {
  border-radius: 50%;
}

<div>
  <div
    class=" c0 c1"
    color="#D5D5D5"
    size="21"
  >
    <span
      class=" c2"
      size="21"
    />
    <div
      class=" c3 c4"
      color="#a2a2a2"
    />
  </div>
</div>
`;

exports[`Avatar matches snapshot 1`] = `
.c3 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(162,162,162,0.75), rgba(162,162,162,0.25), rgba(162,162,162,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 50%;
  padding: 1em;
  width: 1.5em;
  height: 1.5em;
  background-color: #D5D5D5;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  color: #51575D;
  font-size: 0.5em;
  font-weight: 600;
}

.c4 {
  border-radius: 50%;
}

<div>
  <div
    class=" c0 c1"
    color="#D5D5D5"
    size="1.5"
  >
    <span
      class=" c2"
      size="1.5"
    />
    <div
      class=" c3 c4"
      color="#a2a2a2"
    />
  </div>
</div>
`;

exports[`Avatar matches snapshot loading state 1`] = `
.c4 {
  opacity: 1;
  background: linear-gradient( 90deg, rgba(162,162,162,0.75), rgba(162,162,162,0.25), rgba(162,162,162,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
}

.c0 {
  display: block;
  position: relative;
  color: transparent !important;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c0 > *:not(.c3) {
  opacity: 0 !important;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 50%;
  padding: 1em;
  width: 1.5em;
  height: 1.5em;
  background-color: #D5D5D5;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  color: #51575D;
  font-size: 0.5em;
  font-weight: 600;
}

.c5 {
  border-radius: 50%;
}

<div>
  <div
    class=" c0 c1"
    color="#D5D5D5"
    size="1.5"
  >
    <span
      class=" c2"
      size="1.5"
    />
    <div
      class=" c3 c4 c5"
      color="#a2a2a2"
    />
  </div>
</div>
`;
